# paper-distill-mcp

./: .env.example  .gitignore  .mcp.json.example  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
bot/: notifier.py
curate/: filter.py  ranker.py
data/: topic_prefs.json
generate/: daily_digest.py  non_pushed_papers.py  obsidian_note.py  telegram_message.py
generate/templates/: chat_summary_prompt.md
integrations/: zotero_api.py
mcp_server/: config.py  server.py
paper_digest/: __main__.py  collect.py  openclaw_runner.py  pipeline.py  pool.py  reviewer.py  rotation.py
scripts/: reset-test.sh
search/: arxiv_search.py  biorxiv_search.py  core_search.py  crossref_search.py  dblp_search.py  deepseek.py  europepmc_search.py  merger.py  openalex.py  papers_with_code.py  pubmed.py  query_all.py  semantic_scholar.py  unpaywall_lookup.py
tests/: test_mcp_smoke.py
